# TradingAgents-MCP

./: .gitignore  .opencode.json  AGENTS.md  README.md  pyproject.toml  timelyre_api-1.4.0-py3-none-any.whl  timelyre_api_文档.docx
.opencode/skills/trading-agents/: SKILL.md
docs/: AGENTS.md  INTERNAL_DATA_SOURCE_MIGRATION.md  MCP_MIGRATION_ANALYSIS.md  MCP_PERFORMANCE_OPTIMIZATION.md  MCP_SERVICE_PLAN.md  MCP_SKILL_INTEGRATION.md
src/: debug_pycharm.py  test.py
src/config/: settings.json
src/tradingagents/: __init__.py  default_config.py
src/tradingagents/agents/: __init__.py
src/tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  news_social_analyst.py  social_media_analyst.py
src/tradingagents/agents/utils/: agent_utils.py  memory.py
src/tradingagents/config/: __init__.py  config_manager.py
src/tradingagents/constants/: data_sources.py
src/tradingagents/dataflows/: data_source_manager.py  interface.py  optimized_china_data.py  realtime_metrics.py  stock_data_service.py
src/tradingagents/graph/: setup.py  trading_graph.py
src/tradingagents/llm_adapters/: dashscope_openai_adapter.py  deepseek_adapter.py  google_openai_adapter.py  openai_compatible_base.py
src/tradingagents/tools/: unified_news_tool.py
src/tradingagents/utils/: logging_init.py  logging_manager.py  stock_validator.py
src/tradingagents_mcp/: __init__.py  __main__.py  analyst_runner.py  prompts.py  screen.py  server.py  shared_context.py  trade_calendar.py  validators.py
src/tradingagents_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+12 files in other folders)
