[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-mcp"
version = "1.0.0-preview"
description = "TradingAgents-CN MCP Server — AI金融交易分析多Agent框架的MCP封装（含核心引擎，独立可运行）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    # MCP
    "mcp[cli]>=1.0.0",
    # 数据源和金融数据
    "akshare>=1.17.86",
    "baostock>=0.8.8",
    "finnhub-python>=2.4.23",
    "tushare>=1.4.21",
    "yfinance>=0.2.63",
    "stockstats>=0.6.5",
    "timelyre-api==1.4.0",
    # AI和LLM
    "dashscope>=1.20.0",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "openai>=1.0.0,<2.0.0",
    # 数据处理
    "pandas>=2.0.0",
    # 网络和爬虫
    "curl-cffi>=0.6.0",
    "feedparser>=6.0.11",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "requests>=2.32.4",
    # 工具
    "psutil>=6.1.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
tradingagents-mcp = "tradingagents_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tradingagents*"]

[tool.setuptools.package-data]
tradingagents = ["py.typed"]

[tool.uv.sources]
timelyre-api = { path = "/home/transwarp/Code/AI金融项目/timelyre_api-1.4.0-py3-none-any.whl" }